--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,14 @@
             "App\\": "src/"
         }
     },
+    "require": {
+        "php": "^8.2",
+        "oopers/maw-framework": "master"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.26",
+        "phpunit/phpunit": "^10"
+    },
     "minimum-stability": "dev",
     "authors": [
         {
@@ -22,8 +30,5 @@
             "type": "vcs",
             "url": "https://github.com/CPNV-ES/oopers-maw-framework"
         }
-    ],
-    "require": {
-        "oopers/maw-framework": "master"
-    }
+    ]
 }
