MAW-1-29 : Changes SASS integration from bun to nodejs (to support windows)

--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
   "name": "maw-exercise-looper",
-  "module": "index.ts",
-  "type": "module",
   "scripts": {
-    "build-css": "bunx sass assets/style/app.scss public/build/app.css",
-    "watch": "bunx sass --watch assets/style/app.scss public/build/app.css"
+    "build-css": "npx sass assets/style/app.scss public/build/app.css",
+    "watch-css": "npx sass --watch assets/style/app.scss public/build/app.css"
   },
   "devDependencies": {
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
     "sass": "^1.66.1"
   }
 }
