--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,12 @@
     },
     "require": {
         "php": "^8.2",
-        "oopers/maw-framework": "dev-develop"
+        "oopers/maw-framework": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.26",
         "phpunit/phpunit": "^10"
     },
-    "minimum-stability": "dev",
     "authors": [
         {
             "name": "dimitri-rutz",
